--- a/rankplot.tex
+++ b/rankplot.tex
@@ -7,71 +7,22 @@
 \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
 
-% % budget TUmahRFw TUmanRFw ATUmanRFw MarRFw ATUman5NNa ATUmah5NNa SGmultiRFw ATUmahRFw EERent5NNa TUmah5NNa Rnd5NNa SGmulti5NNa
-% % budget TUmanRFw TUmahRFw GATUApmanRFw ATUmah5NNa ATUman5NNa GATUApman5NNa ATUmanRFw TUmah5NNa ATUmahRFw TUman5NNa
-% \addplot+[violet, dashed, thick, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=Rnd5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{Rnd5NNa}}
-% \addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=RndRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{RndRFw}}
-% \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=Rnd5NNb] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{Rnd5NNb}}
-% \addplot+[green, densely dashed, thick, mark options={solid, scale=2.5}, mark repeat=200, mark phase=48] table[x=budget, y=RndNB] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{RndNB}}
-% \addplot+[solid, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=RndELM] {kappamediaParesReduxRank.plot};\addlegendentry{RndELM}
-% \addplot+[solid, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=RndC4.5w] {kappamediaParesReduxRank.plot};\addlegendentry{RndC4.5w}
-% \addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=RndVFDT] {kappamediaParesReduxRank.plot};\addlegendentry{RndVFDT}
-% \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=RndCIELM] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{RndCIELM}}
-% \addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=RndSVM] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{RndSVM}}
-% % \addplot+[dashed, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=TUmah5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{TUmah5NNa}
-% % \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=ATUmahRFw] {kappamediaParesReduxRank.plot};\addlegendentry{ATUmahRFw}
-% % \addplot+[solid, blue, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=TUman5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{TUman5NNa}
-% 
-% % \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=TUmanRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{TUmanRFw}}
-% % \addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=TUmahRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{TUmahRFw}}
-% % \addplot+[solid, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=GATUApmanRFw] {kappamediaParesReduxRank.plot};\addlegendentry{GATUApmanRFw}
-% % \addplot+[solid, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=ATUmah5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{ATUmah5NNa}
-% % \addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=ATUman5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{ATUman5NNa}
-% % \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=GATUApman5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{GATUApman5NNa}}
-% % \addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=ATUmanRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{ATUmanRFw}}
-% % \addplot+[dashed, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=TUmah5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{TUmah5NNa}
-% % \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=ATUmahRFw] {kappamediaParesReduxRank.plot};\addlegendentry{ATUmahRFw}
-% % \addplot+[solid, blue, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=TUman5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{TUman5NNa}
-% 
-% % \addplot+[dashed, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=36] table[x=budget, y=MarRFw] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{MarRFw}}
-% % \addplot+[solid, gray, mark=*, mark options={solid, scale=1}, mark repeat=200, mark phase=132] table[x=budget, y=SGmultiRFw] {kappamediaParesReduxRank.plot};\addlegendentry{SGmultiRFw}
-% % \addplot+[green, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=EERent5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{EERent5NNa}}
-% % \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=Rnd5NNa] {kappamediaParesReduxRank.plot};\addlegendentry{\textbf{Rnd5NNa}}
-% 
-% 
-% % \addplot+[orange, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
-% % % \addplot+[violet, thick, mark=pentagon, mark options={solid, scale=1.5}, mark repeat=200, mark phase=60] table[x=budget, y=ALUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ALUmah}}
-% % \addplot+[violet, thick, mark=10-pointed star, mark options={solid, scale=1.5}, densely dotted, mark repeat=200, mark phase=24] table[x=budget, y=ATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUman}}
-% % \addplot+[solid, red, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUmah] {kappamediaallReduxRank.plot};\addlegendentry{TUmah}
-% % % \addplot+[solid, thick, orange, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUmah] {kappamediaallReduxRank.plot};\addlegendentry{LUmah}
-% % \addplot+[solid, gray, mark=*, mark options={solid, scale=1}, mark repeat=200, mark phase=132] table[x=budget, y=TUman] {kappamediaallReduxRank.plot};\addlegendentry{TUman}
-% % % \addplot+[solid, thick, black, mark=*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=144] table[x=budget, y=LUman] {kappamediaallReduxRank.plot};\addlegendentry{LUman}
-% %
+% \addplot+[solid, blue,   mark=star,     mark phase=83, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUman] {kappamediaallReduxRank.plot};\addlegendentry{TUman}
+\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappamediaallReduxRank.plot};\addlegendentry{TUmah}
 
-% budget Rnd Clu ATUeuc ATUman ATUmah Ent Mar DWeuc TUeuc TUman SGmulti SGmulti EERacu EERent GATUeuc GATUman TUmah GATUmah SVMLkff SVMLbal SVMLsim SVMLsel
-% \addplot+[solid, red, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
-% \addplot+[dashed, violet, mark=pentagon, mark options={solid, scale=1}, mark repeat=200, mark phase=12] table[x=budget, y=Clu] {kappamediaallReduxRank.plot};\addlegendentry{Clu}
-% \addplot+[blue, densely dashed, thick, mark options={solid, scale=1.5}, mark repeat=200, mark phase=48] table[x=budget, y=ATUeuc] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUeuc}}
-% \addplot+[dashed, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=36] table[x=budget, y=ATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUman}}
-% \addplot+[dashed, thick, black, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=36] table[x=budget, y=ATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
-% \addplot+[dotted, black, mark=pentagon, mark options={solid, scale=1}, mark repeat=200, mark phase=12] table[x=budget, y=Ent] {kappamediaallReduxRank.plot};\addlegendentry{Ent}
-% \addplot+[solid, black, mark=square, mark options={solid, scale=1}, mark repeat=200, mark phase=72] table[x=budget, y=Mar] {kappamediaallReduxRank.plot};\addlegendentry{Mar}
-\addplot+[solid, dark red, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
-% \addplot+[solid, blue, mark=square*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamediaallReduxRank.plot};\addlegendentry{TUeuc}
-\addplot+[dotted, black, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUman] {kappamediaallReduxRank.plot};\addlegendentry{TUman}
-\addplot+[dotted, black, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUmah] {kappamediaallReduxRank.plot};\addlegendentry{TUmah}
-% \addplot+[solid, thick, olive, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=108] table[x=budget, y=SGmultic] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{SGmultic}}
-% \addplot+[solid, thick, red, mark=star, mark options={solid, scale=1.5}, mark repeat=200, mark phase=108] table[x=budget, y=SGmultim] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{SGmultim}}
-% \addplot+[dotted, blue, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=EERacu] {kappamediaallReduxRank.plot};\addlegendentry{EERacu}
-% \addplot+[solid, gray, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=EERent] {kappamediaallReduxRank.plot};\addlegendentry{EERent}
-% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUeuc] {kappamediaallReduxRank.plot};\addlegendentry{GATUeuc}
-\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{GATUman}
-\addplot+[solid, violet, thick, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUmah}
-\addplot+[solid, gray, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=SVMLkff] {kappamediaallReduxRank.plot};\addlegendentry{SVMLkff}
-\addplot+[solid, violet, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=SVMLbal] {kappamediaallReduxRank.plot};\addlegendentry{SVMLbal}
-\addplot+[solid, black, thick, mark=star, mark options={solid, scale=1}, mark repeat=200, mark phase=96] table[x=budget, y=SVMLsim] {kappamediaallReduxRank.plot};\addlegendentry{SVMLsim}
-\addplot+[solid, dark green, mark=triangle*, mark options={solid, scale=1}, mark repeat=200, mark phase=84] table[x=budget, y=SVMLsel] {kappamediaallReduxRank.plot};\addlegendentry{SVMLsel}
-% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=EMC] {kappamediaallReduxRank.plot};\addlegendentry{EMC}
+\addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {kappamediaallReduxRank.plot};\addlegendentry{Rnd}
+\addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {kappamediaallReduxRank.plot};\addlegendentry{Clu}
+% \addplot+[dotted, ultra thick, violet, mark=10-pointed star, mark phase=59, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUman}}
+\addplot+[dotted, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{ATUmah}}
+
+% \addplot+[solid, thick, red,   mark=star,     mark phase=107, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{GATUman}}
+\addplot+[solid, thick, black, mark=10-pointed star,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{GATUmah}}
+
+\addplot+[solid, thick, red,   mark=star,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {kappamediaallReduxRank.plot};\addlegendentry{\textbf{SGmulti}}
+\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {kappamediaallReduxRank.plot};\addlegendentry{Mar}
+\addplot+[solid, black, mark=pentagon,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
+\addplot+[solid, thick, black, mark=square,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=EERacu] {kappamediaallReduxRank.plot};\addlegendentry{EERacu}
+\addplot+[solid, green!30!black, mark=square*,   mark phase=119, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {kappamediaallReduxRank.plot};\addlegendentry{EERent}
 
 \end{axis}
 \end{tikzpicture}
