--- a/stratDistsRedux.tex
+++ b/stratDistsRedux.tex
@@ -1,19 +1,18 @@
 \begin{table}[h]
 \caption{Similaridade entre estratégias de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ estão em negrito.}
-\begin{center}\scalebox{0.8}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc}
- 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}\textbf{GATUman}\end{sideways} & \begin{sideways}\textbf{GATUmah}\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}EERent\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.63}} & \textbf{  0.57} & \textbf{  0.51} &   0.45 &   0.44 & \textbf{  0.56} &   0.36 &   0.36 & \textcolor{red}{\textbf{  0.24}} &   0.38 &   0.38 &   0.46 &   0.37 \\
-Clu	& \textcolor{blue}{\textbf{  0.63}} & - & \textbf{  0.59} & \textbf{  0.52} &   0.49 &   0.48 & \textbf{  0.58} &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.24}} &   0.41 &   0.40 & \textbf{  0.50} &   0.41 \\ \hline
-\textbf{ATUman}	& \textbf{  0.57} & \textcolor{blue}{\textbf{  0.59}} & - & \textbf{  0.57} & \textbf{  0.50} &   0.47 & \textbf{  0.56} &   0.37 &   0.39 & \textcolor{red}{\textbf{  0.23}} &   0.42 &   0.41 &   0.46 &   0.37 \\
-\textbf{ATUmah}	& \textbf{  0.51} & \textbf{  0.52} & \textcolor{blue}{\textbf{  0.57}} & - &   0.45 & \textbf{  0.54} &   0.48 &   0.35 &   0.37 & \textcolor{red}{\textbf{  0.23}} &   0.39 &   0.44 &   0.43 &   0.36 \\ \hline
-\textbf{GATUman}	&   0.45 &   0.49 & \textbf{  0.50} &   0.45 & - & \textcolor{blue}{\textbf{  0.53}} &   0.48 &   0.40 &   0.42 & \textcolor{red}{\textbf{  0.24}} &   0.47 &   0.42 &   0.46 &   0.39 \\
-\textbf{GATUmah}	&   0.44 &   0.48 &   0.47 & \textcolor{blue}{\textbf{  0.54}} & \textbf{  0.53} & - &   0.44 &   0.37 &   0.38 & \textcolor{red}{\textbf{  0.24}} &   0.42 &   0.48 &   0.43 &   0.37 \\ \hline
-\textbf{SGmulti}	& \textbf{  0.56} & \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.48 &   0.48 &   0.44 & - &   0.40 &   0.42 & \textcolor{red}{\textbf{  0.25}} &   0.44 &   0.42 & \textbf{  0.50} &   0.39 \\
-Ent	&   0.36 &   0.38 &   0.37 &   0.35 &   0.40 &   0.37 &   0.40 & - & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.25}} &   0.46 &   0.42 &   0.41 &   0.34 \\ \hline
-Mar	&   0.36 &   0.39 &   0.39 &   0.37 &   0.42 &   0.38 &   0.42 & \textcolor{blue}{\textbf{  0.56}} & - & \textcolor{red}{\textbf{  0.24}} & \textcolor{blue}{\textbf{  0.56}} &   0.46 &   0.44 &   0.36 \\
-DWeuc	&   0.24 &   0.24 & \textcolor{red}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.23}} &   0.24 &   0.24 & \textcolor{blue}{\textbf{  0.25}} & \textcolor{blue}{\textbf{  0.25}} &   0.24 & - &   0.24 & \textcolor{red}{\textbf{  0.23}} &   0.24 & \textcolor{red}{\textbf{  0.23}} \\ \hline
-TUman	&   0.38 &   0.41 &   0.42 &   0.39 &   0.47 &   0.42 &   0.44 &   0.46 & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.24}} & - & \textbf{  0.51} &   0.44 &   0.37 \\
-TUmah	&   0.38 &   0.40 &   0.41 &   0.44 &   0.42 &   0.48 &   0.42 &   0.42 &   0.46 & \textcolor{red}{\textbf{  0.23}} & \textcolor{blue}{\textbf{  0.51}} & - &   0.41 &   0.35 \\ \hline
-EERacu	&   0.46 & \textcolor{blue}{\textbf{  0.50}} &   0.46 &   0.43 &   0.46 &   0.43 & \textcolor{blue}{\textbf{  0.50}} &   0.41 &   0.44 & \textcolor{red}{\textbf{  0.24}} &   0.44 &   0.41 & - &   0.44 \\
-EERent	&   0.37 &   0.41 &   0.37 &   0.36 &   0.39 &   0.37 &   0.39 &   0.34 &   0.36 & \textcolor{red}{\textbf{  0.23}} &   0.37 &   0.35 & \textcolor{blue}{\textbf{  0.44}} & - \\ \hline\end{tabular}}\label{stratDistsRedux}
+\begin{center}\scalebox{0.8}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|c}
+ 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}\textbf{GATUman}\end{sideways} & \begin{sideways}\textbf{GATUmah}\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}EERent\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.63}} & \textbf{  0.57} & \textbf{  0.51} &   0.45 &   0.44 & \textbf{  0.56} &   0.36 & \textcolor{red}{\textbf{  0.24}} &   0.38 &   0.38 &   0.46 &   0.37 \\
+Clu	& \textcolor{blue}{\textbf{  0.63}} & - & \textbf{  0.59} & \textbf{  0.52} &   0.49 &   0.48 & \textbf{  0.58} &   0.39 & \textcolor{red}{\textbf{  0.24}} &   0.41 &   0.40 & \textbf{  0.50} &   0.41 \\ \hline
+\textbf{ATUman}	& \textbf{  0.57} & \textcolor{blue}{\textbf{  0.59}} & - & \textbf{  0.57} & \textbf{  0.50} &   0.47 & \textbf{  0.56} &   0.39 & \textcolor{red}{\textbf{  0.23}} &   0.42 &   0.41 &   0.46 &   0.37 \\
+\textbf{ATUmah}	& \textbf{  0.51} & \textbf{  0.52} & \textcolor{blue}{\textbf{  0.57}} & - &   0.45 & \textbf{  0.54} &   0.48 &   0.37 & \textcolor{red}{\textbf{  0.23}} &   0.39 &   0.44 &   0.43 &   0.36 \\ \hline
+\textbf{GATUman}	&   0.45 &   0.49 & \textbf{  0.50} &   0.45 & - & \textcolor{blue}{\textbf{  0.53}} &   0.48 &   0.42 & \textcolor{red}{\textbf{  0.24}} &   0.47 &   0.42 &   0.46 &   0.39 \\
+\textbf{GATUmah}	&   0.44 &   0.48 &   0.47 & \textcolor{blue}{\textbf{  0.54}} & \textbf{  0.53} & - &   0.44 &   0.38 & \textcolor{red}{\textbf{  0.24}} &   0.42 &   0.48 &   0.43 &   0.37 \\ \hline
+\textbf{SGmulti}	& \textbf{  0.56} & \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.48 &   0.48 &   0.44 & - &   0.42 & \textcolor{red}{\textbf{  0.25}} &   0.44 &   0.42 & \textbf{  0.50} &   0.39 \\
+Mar	&   0.36 &   0.39 &   0.39 &   0.37 &   0.42 &   0.38 &   0.42 & - & \textcolor{red}{\textbf{  0.24}} & \textcolor{blue}{\textbf{  0.56}} &   0.46 &   0.44 &   0.36 \\ \hline
+DWeuc	&   0.24 &   0.24 & \textcolor{red}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.23}} &   0.24 &   0.24 & \textcolor{blue}{\textbf{  0.25}} &   0.24 & - &   0.24 & \textcolor{red}{\textbf{  0.23}} &   0.24 & \textcolor{red}{\textbf{  0.23}} \\
+TUman	&   0.38 &   0.41 &   0.42 &   0.39 &   0.47 &   0.42 &   0.44 & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.24}} & - & \textbf{  0.51} &   0.44 &   0.37 \\ \hline
+TUmah	&   0.38 &   0.40 &   0.41 &   0.44 &   0.42 &   0.48 &   0.42 &   0.46 & \textcolor{red}{\textbf{  0.23}} & \textcolor{blue}{\textbf{  0.51}} & - &   0.41 &   0.35 \\
+EERacu	&   0.46 & \textcolor{blue}{\textbf{  0.50}} &   0.46 &   0.43 &   0.46 &   0.43 & \textcolor{blue}{\textbf{  0.50}} &   0.44 & \textcolor{red}{\textbf{  0.24}} &   0.44 &   0.41 & - &   0.44 \\ \hline
+EERent	&   0.37 &   0.41 &   0.37 &   0.36 &   0.39 &   0.37 &   0.39 &   0.36 & \textcolor{red}{\textbf{  0.23}} &   0.37 &   0.35 & \textcolor{blue}{\textbf{  0.44}} & - \\\end{tabular}}\label{stratDistsRedux}
 \end{center}
 \end{table}
