--- a/experimentos.tex
+++ b/experimentos.tex
@@ -93,7 +93,7 @@ A distribuição das vitórias dos diferentes classificadores ao longo das bases de
 indica a existência de diversidade de viés.
 Assim, a adoção dos algoritmos é mais representativa do que
 apenas um único algoritmo arbitrário.
-
+\ano{atualizar contagem e fried depois que ELM terminar mushroom}
 % \input classifsFried
 \begin{table}[h]
 \caption{\textbf{Um contra um e contagem de posições}.
