--- a/plot.tex
+++ b/plot.tex
@@ -10,15 +10,22 @@ Inclui apenas resultados para as bases com mais de 200 exemplos.}}
 \begin{axis}[xlabel=consultas, ylabel=kappa (média), legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, yticklabel style={/pgf/number format/fixed}]
 
-\addplot+[dashed, black,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {kappamediaallRedux.plot};\addlegendentry{Rnd}
-\addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {kappamediaallRedux.plot};\addlegendentry{Clu}
-\addplot+[dotted, thick, violet, mark=10-pointed star, mark phase=59, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUman] {kappamediaallRedux.plot};\addlegendentry{\textbf{ATUman}}
-\addplot+[dotted, thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappamediaallRedux.plot};\addlegendentry{\textbf{ATUmah}}
+% \addplot+[solid, thick, black, mark=10-pointed star,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUman] {kappamediaallRedux.plot};\addlegendentry{\textbf{GATUman}}
+\addplot+[solid, thick, black, mark=10-pointed star,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappamediaallRedux.plot};\addlegendentry{\textbf{GATUmah}}
+% \addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUman] {kappamediaallRedux.plot};\addlegendentry{TUman}
+\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappamediaallRedux.plot};\addlegendentry{TUmah}
 
-\addplot+[blue,   mark=star,     mark phase=83, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUman] {kappamediaallRedux.plot};\addlegendentry{TUman}
-\addplot+[red, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah] {kappamediaallRedux.plot};\addlegendentry{TUmah}
-\addplot+[gray,   mark=star,     mark phase=107, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUman] {kappamediaallRedux.plot};\addlegendentry{GATUman}
-\addplot+[olive, mark=square,   mark phase=119, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=GATUmah] {kappamediaallRedux.plot};\addlegendentry{GATUmah}
+\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar] {kappamediaallRedux.plot};\addlegendentry{Mar}
+% \addplot+[dotted, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200]] table[x=budget, y=ATUman] {kappamediaallRedux.plot};\addlegendentry{\textbf{ATUman}}
+\addplot+[dotted, ultra thick, orange,  mark repeat=200,  mark phase=71, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=ATUmah] {kappamediaallRedux.plot};\addlegendentry{\textbf{ATUmah}}
+
+\addplot+[solid, green!30!black, mark=square*,   mark phase=179, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent] {kappamediaallRedux.plot};\addlegendentry{EERent}
+\addplot+[solid, thick, red,   mark=star,     mark phase=131, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=SGmulti] {kappamediaallRedux.plot};\addlegendentry{\textbf{SGmulti}}
+\addplot+[solid, thick, black, mark=square,   mark phase=167, mark options={solid, scale=1.9}, mark repeat=200] table[x=budget, y=EERacu] {kappamediaallRedux.plot};\addlegendentry{EERacu}
+
+\addplot+[dashed, green!50!black, mark=triangle*,   mark phase=47, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Clu] {kappamediaallRedux.plot};\addlegendentry{Clu}
+\addplot+[dashed, olive,            mark=triangle,     mark phase=35, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Rnd] {kappamediaallRedux.plot};\addlegendentry{Rnd}
+\addplot+[solid, black, mark=pentagon,   mark phase=155, mark options={solid, thick, scale=1.4}, mark repeat=200] table[x=budget, y=DWeuc] {kappamediaallRedux.plot};\addlegendentry{DWeuc}
 
 \end{axis}
 \end{tikzpicture}
